chore: 上线前版本 - UI性能优化与功能完善
前端优化:
- WebSocket消息批量处理与节流(100ms批量间隔)
- 告警通知防抖(2秒内最多1条)
- eventStats单次reduce替代7次filter
- ChartsRow数据useMemo缓存
- WebSocket闭包ref修复(handleMessageRef/handleReconnectRef)
- 清理生产环境console.log

后端优化:
- 控制器与服务层重构
- 数据导出功能
- 规则引擎UI配置
- 数据库迁移脚本
- Python收集器修复

🤖 Generated with CodeArts Agent